--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#727071</color>
+    <color name="numericButtonAccent">#00574B</color>
+    <color name="operationButtonAccent">#570004</color>
+    <color name="mainDisplayBGColor">#D6D7D7</color>
 </resources>
